// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/npm/extract/index .extractPackageFile() catches invalid names 1`] = `
{
  "deps": [
    {
      "depName": "kgabis/parson",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "invalid-name",
    },
  ],
  "extractedConstraints": {},
  "managerData": {
    "hasPackageManager": false,
    "npmLock": undefined,
    "packageJsonName": undefined,
    "pnpmShrinkwrap": undefined,
    "workspacesPackages": undefined,
    "yarnLock": undefined,
    "yarnZeroInstall": false,
  },
  "npmrc": undefined,
  "packageFileVersion": undefined,
  "skipInstalls": true,
}
`;

exports[`modules/manager/npm/extract/index .extractPackageFile() extracts engines 1`] = `
{
  "deps": [
    {
      "currentValue": "1.6.0",
      "datasource": "npm",
      "depName": "angular",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "1.6.0",
      "datasource": "npm",
      "depName": "@angular/cli",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    {
      "currentValue": "*",
      "datasource": "npm",
      "depName": "foo",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    {
      "currentValue": "file:../foo/bar",
      "depName": "bar",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "skipReason": "file",
    },
    {
      "currentValue": "",
      "datasource": "npm",
      "depName": "baz",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "skipReason": "empty",
    },
    {
      "currentValue": "latest",
      "depName": "other",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "skipReason": "unspecified-version",
    },
    {
      "currentValue": ">=1.7.0 <2.0.0",
      "depName": "atom",
      "depType": "engines",
      "prettyDepType": "engine",
      "skipReason": "unknown-engines",
    },
    {
      "commitMessageTopic": "Node.js",
      "currentValue": ">= 8.9.2",
      "datasource": "node-version",
      "depName": "node",
      "depType": "engines",
      "prettyDepType": "engine",
    },
    {
      "commitMessageTopic": "npm",
      "currentValue": "^8.0.0",
      "datasource": "npm",
      "depName": "npm",
      "depType": "engines",
      "prettyDepType": "engine",
    },
    {
      "commitMessageTopic": "pnpm",
      "currentValue": "^1.2.0",
      "datasource": "npm",
      "depName": "pnpm",
      "depType": "engines",
      "prettyDepType": "engine",
    },
    {
      "commitMessageTopic": "Yarn",
      "currentValue": "disabled",
      "datasource": "npm",
      "depName": "yarn",
      "depType": "engines",
      "prettyDepType": "engine",
      "skipReason": "unspecified-version",
    },
    {
      "currentValue": ">=1.49.3",
      "datasource": "github-tags",
      "depName": "vscode",
      "depType": "engines",
      "packageName": "microsoft/vscode",
      "prettyDepType": "engine",
      "versioning": "npm",
    },
  ],
  "extractedConstraints": {
    "node": ">= 8.9.2",
    "npm": "^8.0.0",
    "pnpm": "^1.2.0",
    "vscode": ">=1.49.3",
  },
  "managerData": {
    "hasPackageManager": false,
    "npmLock": undefined,
    "packageJsonName": undefined,
    "pnpmShrinkwrap": undefined,
    "workspacesPackages": undefined,
    "yarnLock": undefined,
    "yarnZeroInstall": false,
  },
  "npmrc": undefined,
  "packageFileVersion": undefined,
  "skipInstalls": true,
}
`;

exports[`modules/manager/npm/extract/index .extractPackageFile() extracts non-npmjs 1`] = `
{
  "deps": [
    {
      "currentValue": "github:owner/a",
      "depName": "a",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "unspecified-version",
    },
    {
      "currentValue": "github:owner/b#master",
      "depName": "b",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "unversioned-reference",
    },
    {
      "currentRawValue": "github:owner/c#v1.1.0",
      "currentValue": "v1.1.0",
      "datasource": "github-tags",
      "depName": "c",
      "depType": "dependencies",
      "gitRef": true,
      "packageName": "owner/c",
      "pinDigests": false,
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/c",
      "versioning": "npm",
    },
    {
      "currentValue": "github:owner/d#a7g3eaf",
      "depName": "d",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "unversioned-reference",
    },
    {
      "currentDigest": "49b5aca613b33c5b626ae68c03a385f25c142f55",
      "currentRawValue": "github:owner/e#49b5aca613b33c5b626ae68c03a385f25c142f55",
      "currentValue": null,
      "datasource": "github-tags",
      "depName": "e",
      "depType": "dependencies",
      "gitRef": true,
      "packageName": "owner/e",
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/e",
      "versioning": "npm",
    },
    {
      "currentRawValue": "owner/f#v2.0.0",
      "currentValue": "v2.0.0",
      "datasource": "github-tags",
      "depName": "f",
      "depType": "dependencies",
      "gitRef": true,
      "packageName": "owner/f",
      "pinDigests": false,
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/f",
      "versioning": "npm",
    },
    {
      "currentValue": "gitlab:owner/g#v1.0.0",
      "depName": "g",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "unspecified-version",
    },
    {
      "currentValue": "github:-hello/world#v1.0.0",
      "depName": "h",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "unspecified-version",
    },
    {
      "currentValue": "@foo/bar#v2.0.0",
      "depName": "i",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "unspecified-version",
    },
    {
      "currentValue": "github:frank#v0.0.1",
      "depName": "j",
      "depType": "dependencies",
      "prettyDepType": "dependency",
      "skipReason": "unspecified-version",
    },
    {
      "currentDigest": "49b5aca",
      "currentRawValue": "github:owner/k#49b5aca",
      "currentValue": null,
      "datasource": "github-tags",
      "depName": "k",
      "depType": "dependencies",
      "gitRef": true,
      "packageName": "owner/k",
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/k",
      "versioning": "npm",
    },
    {
      "currentDigest": "abcdef0",
      "currentRawValue": "github:owner/l.git#abcdef0",
      "currentValue": null,
      "datasource": "github-tags",
      "depName": "l",
      "depType": "dependencies",
      "gitRef": true,
      "packageName": "owner/l",
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/l",
      "versioning": "npm",
    },
    {
      "currentRawValue": "https://github.com/owner/m.git#v1.0.0",
      "currentValue": "v1.0.0",
      "datasource": "github-tags",
      "depName": "m",
      "depType": "dependencies",
      "gitRef": true,
      "packageName": "owner/m",
      "pinDigests": false,
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/m",
      "versioning": "npm",
    },
    {
      "currentRawValue": "git+https://github.com/owner/n#v2.0.0",
      "currentValue": "v2.0.0",
      "datasource": "github-tags",
      "depName": "n",
      "depType": "dependencies",
      "gitRef": true,
      "packageName": "owner/n",
      "pinDigests": false,
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/n",
      "versioning": "npm",
    },
    {
      "currentRawValue": "git@github.com:owner/o.git#v2.0.0",
      "currentValue": "v2.0.0",
      "datasource": "github-tags",
      "depName": "o",
      "depType": "dependencies",
      "gitRef": true,
      "packageName": "owner/o",
      "pinDigests": false,
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/o",
      "versioning": "npm",
    },
    {
      "currentRawValue": "Owner/P.git#v2.0.0",
      "currentValue": "v2.0.0",
      "datasource": "github-tags",
      "depName": "p",
      "depType": "dependencies",
      "gitRef": true,
      "packageName": "Owner/P",
      "pinDigests": false,
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/Owner/P",
      "versioning": "npm",
    },
    {
      "currentRawValue": "github:owner/q#semver:1.1.0",
      "currentValue": "1.1.0",
      "datasource": "github-tags",
      "depName": "q",
      "depType": "dependencies",
      "gitRef": true,
      "packageName": "owner/q",
      "pinDigests": false,
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/q",
      "versioning": "npm",
    },
    {
      "currentRawValue": "github:owner/r#semver:^1.0.0",
      "currentValue": "^1.0.0",
      "datasource": "github-tags",
      "depName": "r",
      "depType": "dependencies",
      "gitRef": true,
      "packageName": "owner/r",
      "pinDigests": false,
      "prettyDepType": "dependency",
      "sourceUrl": "https://github.com/owner/r",
      "versioning": "npm",
    },
  ],
  "extractedConstraints": {},
  "managerData": {
    "hasPackageManager": false,
    "npmLock": undefined,
    "packageJsonName": undefined,
    "pnpmShrinkwrap": undefined,
    "workspacesPackages": undefined,
    "yarnLock": undefined,
    "yarnZeroInstall": false,
  },
  "npmrc": undefined,
  "packageFileVersion": undefined,
  "skipInstalls": true,
}
`;

exports[`modules/manager/npm/extract/index .extractPackageFile() extracts npm package alias 1`] = `
{
  "deps": [
    {
      "currentValue": "1",
      "datasource": "npm",
      "depName": "a",
      "depType": "dependencies",
      "npmPackageAlias": true,
      "packageName": "foo",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "1.2.3",
      "datasource": "npm",
      "depName": "b",
      "depType": "dependencies",
      "npmPackageAlias": true,
      "packageName": "@foo/bar",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "^1.2.3",
      "datasource": "npm",
      "depName": "c",
      "depType": "dependencies",
      "npmPackageAlias": true,
      "packageName": "c",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "1.2.3",
      "datasource": "npm",
      "depName": "d",
      "depType": "dependencies",
      "npmPackageAlias": true,
      "packageName": "d",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "1.x.x",
      "datasource": "npm",
      "depName": "e",
      "depType": "dependencies",
      "npmPackageAlias": true,
      "packageName": "e",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "foo",
      "depName": "f",
      "depType": "dependencies",
      "npmPackageAlias": true,
      "packageName": "f",
      "prettyDepType": "dependency",
      "skipReason": "unspecified-version",
    },
    {
      "currentValue": "npm:@foo/@bar/@1.2.3",
      "depName": "g",
      "depType": "dependencies",
      "npmPackageAlias": true,
      "prettyDepType": "dependency",
      "skipReason": "unspecified-version",
    },
  ],
  "extractedConstraints": {},
  "managerData": {
    "hasPackageManager": false,
    "npmLock": "package-lock.json",
    "packageJsonName": undefined,
    "pnpmShrinkwrap": undefined,
    "workspacesPackages": undefined,
    "yarnLock": undefined,
    "yarnZeroInstall": false,
  },
  "npmrc": undefined,
  "packageFileVersion": undefined,
  "skipInstalls": false,
}
`;

exports[`modules/manager/npm/extract/index .extractPackageFile() extracts packageManager 1`] = `
{
  "deps": [
    {
      "commitMessageTopic": "Yarn",
      "currentValue": "3.0.0",
      "datasource": "npm",
      "depName": "yarn",
      "depType": "packageManager",
      "packageName": "@yarnpkg/cli",
      "prettyDepType": "packageManager",
    },
  ],
  "extractedConstraints": {
    "yarn": "3.0.0",
  },
  "managerData": {
    "hasPackageManager": true,
    "npmLock": undefined,
    "packageJsonName": undefined,
    "pnpmShrinkwrap": undefined,
    "workspacesPackages": undefined,
    "yarnLock": undefined,
    "yarnZeroInstall": false,
  },
  "npmrc": undefined,
  "packageFileVersion": undefined,
  "skipInstalls": true,
}
`;

exports[`modules/manager/npm/extract/index .extractPackageFile() extracts volta 1`] = `
{
  "deps": [
    {
      "commitMessageTopic": "Node.js",
      "currentValue": "8.9.2",
      "datasource": "node-version",
      "depName": "node",
      "depType": "engines",
      "prettyDepType": "engine",
    },
    {
      "commitMessageTopic": "Node.js",
      "currentValue": "8.9.2",
      "datasource": "node-version",
      "depName": "node",
      "depType": "volta",
      "prettyDepType": "volta",
    },
    {
      "commitMessageTopic": "Yarn",
      "currentValue": "1.12.3",
      "datasource": "npm",
      "depName": "yarn",
      "depType": "volta",
      "prettyDepType": "volta",
    },
    {
      "currentValue": "5.9.0",
      "datasource": "npm",
      "depName": "npm",
      "depType": "volta",
      "prettyDepType": "volta",
    },
    {
      "commitMessageTopic": "pnpm",
      "currentValue": "6.11.2",
      "datasource": "npm",
      "depName": "pnpm",
      "depType": "volta",
      "prettyDepType": "volta",
    },
    {
      "currentValue": "1.0.0",
      "depName": "invalid",
      "depType": "volta",
      "prettyDepType": "volta",
      "skipReason": "unknown-volta",
    },
  ],
  "extractedConstraints": {
    "node": "8.9.2",
  },
  "managerData": {
    "hasPackageManager": false,
    "npmLock": undefined,
    "packageJsonName": undefined,
    "pnpmShrinkwrap": undefined,
    "workspacesPackages": undefined,
    "yarnLock": undefined,
    "yarnZeroInstall": false,
  },
  "npmrc": undefined,
  "packageFileVersion": undefined,
  "skipInstalls": true,
}
`;

exports[`modules/manager/npm/extract/index .extractPackageFile() extracts volta yarn unspecified-version 1`] = `
{
  "deps": [
    {
      "commitMessageTopic": "Node.js",
      "currentValue": "8.9.2",
      "datasource": "node-version",
      "depName": "node",
      "depType": "engines",
      "prettyDepType": "engine",
    },
    {
      "commitMessageTopic": "Node.js",
      "currentValue": "8.9.2",
      "datasource": "node-version",
      "depName": "node",
      "depType": "volta",
      "prettyDepType": "volta",
    },
    {
      "commitMessageTopic": "Yarn",
      "currentValue": "unknown",
      "datasource": "npm",
      "depName": "yarn",
      "depType": "volta",
      "prettyDepType": "volta",
      "skipReason": "unspecified-version",
    },
  ],
  "extractedConstraints": {
    "node": "8.9.2",
  },
  "managerData": {
    "hasPackageManager": false,
    "npmLock": undefined,
    "packageJsonName": undefined,
    "pnpmShrinkwrap": undefined,
    "workspacesPackages": undefined,
    "yarnLock": undefined,
    "yarnZeroInstall": false,
  },
  "npmrc": undefined,
  "packageFileVersion": undefined,
  "skipInstalls": true,
}
`;

exports[`modules/manager/npm/extract/index .extractPackageFile() finds a lock file 1`] = `
{
  "deps": [
    {
      "currentValue": "6.5.0",
      "datasource": "npm",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "~1.6.0",
      "datasource": "npm",
      "depName": "bower",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "13.1.0",
      "datasource": "npm",
      "depName": "browserify",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "0.9.2",
      "datasource": "npm",
      "depName": "browserify-css",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "=0.22.0",
      "datasource": "npm",
      "depName": "cheerio",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "depName": "enabled",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "skipReason": "invalid-value",
    },
    {
      "currentValue": "^1.5.8",
      "datasource": "npm",
      "depName": "angular",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    {
      "currentValue": "4.0.0-beta.1",
      "datasource": "npm",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "resolutions",
      "prettyDepType": "resolutions",
    },
    {
      "currentValue": "8.0.0",
      "datasource": "npm",
      "depName": "@angular/cli",
      "depType": "resolutions",
      "managerData": {
        "key": "**/@angular/cli",
      },
      "prettyDepType": "resolutions",
    },
    {
      "currentValue": "1.33.0",
      "datasource": "npm",
      "depName": "angular",
      "depType": "resolutions",
      "managerData": {
        "key": "**/angular",
      },
      "prettyDepType": "resolutions",
    },
    {
      "currentValue": "1.0.0",
      "datasource": "npm",
      "depName": "glob",
      "depType": "resolutions",
      "managerData": {
        "key": "config/glob",
      },
      "prettyDepType": "resolutions",
    },
  ],
  "extractedConstraints": {},
  "managerData": {
    "hasPackageManager": false,
    "npmLock": undefined,
    "packageJsonName": "renovate",
    "pnpmShrinkwrap": undefined,
    "workspacesPackages": undefined,
    "yarnLock": "yarn.lock",
    "yarnZeroInstall": false,
  },
  "npmrc": undefined,
  "packageFileVersion": "1.0.0",
  "skipInstalls": true,
}
`;

exports[`modules/manager/npm/extract/index .extractPackageFile() finds complex yarn workspaces 1`] = `
{
  "deps": [],
  "extractedConstraints": {},
  "managerData": {
    "hasPackageManager": false,
    "npmLock": undefined,
    "packageJsonName": "@a/b",
    "pnpmShrinkwrap": undefined,
    "workspacesPackages": [
      "packages/*",
    ],
    "yarnLock": undefined,
    "yarnZeroInstall": false,
  },
  "npmrc": undefined,
  "packageFileVersion": "0.0.8",
  "skipInstalls": true,
}
`;

exports[`modules/manager/npm/extract/index .extractPackageFile() returns an array of dependencies 1`] = `
{
  "deps": [
    {
      "currentValue": "6.5.0",
      "datasource": "npm",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "~1.6.0",
      "datasource": "npm",
      "depName": "bower",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "13.1.0",
      "datasource": "npm",
      "depName": "browserify",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "0.9.2",
      "datasource": "npm",
      "depName": "browserify-css",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "=0.22.0",
      "datasource": "npm",
      "depName": "cheerio",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "depName": "enabled",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "skipReason": "invalid-value",
    },
    {
      "currentValue": "^1.5.8",
      "datasource": "npm",
      "depName": "angular",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    {
      "currentValue": "4.0.0-beta.1",
      "datasource": "npm",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "resolutions",
      "prettyDepType": "resolutions",
    },
    {
      "currentValue": "8.0.0",
      "datasource": "npm",
      "depName": "@angular/cli",
      "depType": "resolutions",
      "managerData": {
        "key": "**/@angular/cli",
      },
      "prettyDepType": "resolutions",
    },
    {
      "currentValue": "1.33.0",
      "datasource": "npm",
      "depName": "angular",
      "depType": "resolutions",
      "managerData": {
        "key": "**/angular",
      },
      "prettyDepType": "resolutions",
    },
    {
      "currentValue": "1.0.0",
      "datasource": "npm",
      "depName": "glob",
      "depType": "resolutions",
      "managerData": {
        "key": "config/glob",
      },
      "prettyDepType": "resolutions",
    },
  ],
  "extractedConstraints": {},
  "managerData": {
    "hasPackageManager": false,
    "npmLock": undefined,
    "packageJsonName": "renovate",
    "pnpmShrinkwrap": undefined,
    "workspacesPackages": undefined,
    "yarnLock": undefined,
    "yarnZeroInstall": false,
  },
  "npmrc": undefined,
  "packageFileVersion": "1.0.0",
  "skipInstalls": true,
}
`;

exports[`modules/manager/npm/extract/index .extractPackageFile() returns an array of dependencies with resolution comments 1`] = `
{
  "deps": [
    {
      "currentValue": "6.5.0",
      "datasource": "npm",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "~1.6.0",
      "datasource": "npm",
      "depName": "bower",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "13.1.0",
      "datasource": "npm",
      "depName": "browserify",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "0.9.2",
      "datasource": "npm",
      "depName": "browserify-css",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "=0.22.0",
      "datasource": "npm",
      "depName": "cheerio",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "depName": "enabled",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "skipReason": "invalid-value",
    },
    {
      "currentValue": "^1.5.8",
      "datasource": "npm",
      "depName": "angular",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    {
      "currentValue": "4.0.0-beta.1",
      "datasource": "npm",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    {
      "depName": undefined,
      "depType": "resolutions",
      "managerData": {
        "key": "//",
      },
      "prettyDepType": "resolutions",
      "skipReason": "invalid-name",
    },
    {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "resolutions",
      "managerData": {
        "key": "**/config",
      },
      "prettyDepType": "resolutions",
    },
  ],
  "extractedConstraints": {},
  "managerData": {
    "hasPackageManager": false,
    "npmLock": undefined,
    "packageJsonName": "renovate",
    "pnpmShrinkwrap": undefined,
    "workspacesPackages": [],
    "yarnLock": undefined,
    "yarnZeroInstall": false,
  },
  "npmrc": undefined,
  "packageFileVersion": "1.0.0",
  "skipInstalls": true,
}
`;

exports[`modules/manager/npm/extract/index .extractPackageFile() sets skipInstalls false if Yarn zero-install is used 1`] = `
{
  "deps": [
    {
      "currentValue": "6.5.0",
      "datasource": "npm",
      "depName": "autoprefixer",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "~1.6.0",
      "datasource": "npm",
      "depName": "bower",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "13.1.0",
      "datasource": "npm",
      "depName": "browserify",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "0.9.2",
      "datasource": "npm",
      "depName": "browserify-css",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "=0.22.0",
      "datasource": "npm",
      "depName": "cheerio",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "dependencies",
      "prettyDepType": "dependency",
    },
    {
      "depName": "enabled",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
      "skipReason": "invalid-value",
    },
    {
      "currentValue": "^1.5.8",
      "datasource": "npm",
      "depName": "angular",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-touch",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    {
      "currentValue": "1.5.8",
      "datasource": "npm",
      "depName": "angular-sanitize",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    {
      "currentValue": "4.0.0-beta.1",
      "datasource": "npm",
      "depName": "@angular/core",
      "depType": "devDependencies",
      "prettyDepType": "devDependency",
    },
    {
      "currentValue": "1.21.0",
      "datasource": "npm",
      "depName": "config",
      "depType": "resolutions",
      "prettyDepType": "resolutions",
    },
    {
      "currentValue": "8.0.0",
      "datasource": "npm",
      "depName": "@angular/cli",
      "depType": "resolutions",
      "managerData": {
        "key": "**/@angular/cli",
      },
      "prettyDepType": "resolutions",
    },
    {
      "currentValue": "1.33.0",
      "datasource": "npm",
      "depName": "angular",
      "depType": "resolutions",
      "managerData": {
        "key": "**/angular",
      },
      "prettyDepType": "resolutions",
    },
    {
      "currentValue": "1.0.0",
      "datasource": "npm",
      "depName": "glob",
      "depType": "resolutions",
      "managerData": {
        "key": "config/glob",
      },
      "prettyDepType": "resolutions",
    },
  ],
  "extractedConstraints": {},
  "managerData": {
    "hasPackageManager": false,
    "npmLock": undefined,
    "packageJsonName": "renovate",
    "pnpmShrinkwrap": undefined,
    "workspacesPackages": undefined,
    "yarnLock": "yarn.lock",
    "yarnZeroInstall": true,
  },
  "npmrc": undefined,
  "packageFileVersion": "1.0.0",
  "skipInstalls": false,
}
`;
